<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".AddContactActivity">

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="333dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/recycler_layout_bg_design"
        android:ems="10"
        android:hint="@string/etCategoryHint"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDob" />

    <EditText
        android:id="@+id/etDob"
        android:layout_width="333dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/recycler_layout_bg_design"
        android:ems="10"
        android:hint="@string/etDobHint"
        android:inputType="datetime"
        android:paddingLeft="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurname" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addContactTitleText"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="333dp"
        android:layout_height="38dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/recycler_layout_bg_design"
        android:ems="10"
        android:hint="@string/etNameHint"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="333dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/recycler_layout_bg_design"
        android:ems="10"
        android:hint="@string/etSurnameHint"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <CheckBox
        android:id="@+id/cbFavorite"
        android:layout_width="119dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/recycler_layout_bg_design"
        android:buttonTint="@android:color/white"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/cbFaveText"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategory" />

    <Button
        android:id="@+id/btnAddContactAc2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_design"
        android:text="@string/btnAddContactAcText"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbFavorite" />

</androidx.constraintlayout.widget.ConstraintLayout>